# furqan-programming-language

./: .gitignore  CHANGELOG.md  HANDOFF.md  LICENSE  QUESTIONS.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: CONTRIBUTING.md  NAMING.md
docs/internals/: CHECKER.md  LEXER.md
examples/multi/: data_loader.furqan  foundation.furqan  loader.furqan  report.furqan
src/furqan/: __init__.py  __main__.py  project.py
src/furqan/checker/: __init__.py  additive.py  all_paths_return.py  bismillah.py  incomplete.py  mizan.py  return_type_match.py  ring_close.py  status_coverage.py  tanzil.py  zahir_batin.py
src/furqan/errors/: __init__.py  marad.py
src/furqan/parser/: __init__.py  ast_nodes.py  parser.py  tokenizer.py
tests/: test_additive.py  test_all_paths_return.py  test_bismillah.py  test_cli.py  test_cross_module_type.py  test_d23_imported_types.py  test_else_d15.py  test_incomplete.py  test_lexer_phase_3_0.py  test_marad.py  test_mizan.py  test_multi_module.py  test_parser.py  test_parser_resource_limits.py  test_return_type_match.py  test_ring_close.py  test_status_coverage.py  test_tanzil.py  test_tokenizer.py  test_version_sync.py  test_zahir_batin.py
tests/fixtures/additive_only/invalid/: module_v2_catalog_dishonest.furqan  module_v2_catalog_dishonest.furqan_history  module_v2_removed_export.furqan  module_v2_removed_export.furqan_history  module_v2_renamed_export.furqan  module_v2_renamed_export.furqan_history  module_v2_type_changed_incompatibly.furqan  module_v2_type_changed_incompatibly.furqan_history
tests/fixtures/additive_only/valid/: module_v1.furqan  module_v2_added_export.furqan  module_v2_added_export.furqan_history  module_v2_optional_major_bump.furqan  (+3 more)
tests/fixtures/invalid/: violates_not_scope_directly.furqan  violates_not_scope_in_second_function.furqan  violates_not_scope_qualified.furqan
tests/fixtures/known_limitation/: scope_evasion_via_alias.furqan
tests/fixtures/parse_errors/: deep_nest.furqan
tests/fixtures/parse_invalid/: call_arg_braced_inner_call.furqan  call_arg_stray_lbrace.furqan  call_arg_stray_rbrace.furqan  mizan_chained_comparison.furqan
tests/fixtures/valid/: call_arg_paren_only.furqan  empty_module.furqan  scan_service.furqan  scope_block_alias.furqan
(+88 files in other folders)
